--- a/HW_3/Web.config
+++ b/HW_3/Web.config
@@ -7,5 +7,8 @@
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
+    <authentication mode="Forms">
+      <forms loginUrl="~/LogIn.aspx"></forms>
+    </authentication>
   </system.web>
 </configuration>
